welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:19: error: ';' expected but 'while' found.
	}while (croisement==false)
         ^Poucet:21: error: 'while' expected but '}' found.
}
^